@@ -1,5 +1,9 @@
 2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* WrapPanel.cs: Added.
+
+2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* StackPanel.cs: Fixed MeasureOverride, removed wrong metadata overrides.
 
 2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>
